--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <h1 style="padding-left: 600px; background-color: pink"> Martial Arts Game </h1>
 
-<canvas id="my-canvas" style="border:2px solid black" width="1500" height="500"></canvas> </canvas>
-
+<canvas id="my-canvas" style="border:2px solid black" width="1920" height="1080"></canvas> 
+<
 
 <button id="backward" style="background-color: #34d5eb; color:black; padding:10px 20px 10px 20px;" > BACKWARD or (Left Arrow Key) </button>
 <button id="block" style="background-color: #34d5eb; color:black; padding:10px 20px 10px 20px;" > BLOCK </button>
@@ -19,11 +19,14 @@
 
 <style>
     body {
-        background-image: url("images/background.png");
+        background-image: url("../canvas game/finisher/images/background.jpg");
         background-size: 100% 100%;
     }
 </style>
 
-<script type="text/javascript" src="script.js"></script>
+<script src="script.js">
+	
+
+</script>
 </body>
 </html>
